# serializer version: 1
# name: test_render_licenses_default
  '''
  licenses (5 third-party components)
  
    runtime dependencies
      cyclopts (>=3.0)                            Apache-2.0
      numpy (>=1.26)                              BSD-3-Clause
  
    vendored binary
      junit-platform-console-standalone (1.11.4)  EPL-2.0
  
    install-time bootstrap
      PyApp (0.22.0)                              Apache-2.0 OR MIT
      python-build-standalone (CPython)           PSF + permissive (OpenSSL, libffi, ncurses, etc.)
  
    full verbatim license texts: novetest licenses --full
    attribution file (in wheel): *.dist-info/licenses/NOTICES.md
  '''
# ---
# name: test_render_licenses_full_appends_verbatim
  '''
  licenses (5 third-party components)
  
    runtime dependencies
      cyclopts (>=3.0)                            Apache-2.0
      numpy (>=1.26)                              BSD-3-Clause
  
    vendored binary
      junit-platform-console-standalone (1.11.4)  EPL-2.0
  
    install-time bootstrap
      PyApp (0.22.0)                              Apache-2.0 OR MIT
      python-build-standalone (CPython)           PSF + permissive (OpenSSL, libffi, ncurses, etc.)
  
    full verbatim license texts: novetest licenses --full
    attribution file (in wheel): *.dist-info/licenses/NOTICES.md
  
    --- VERBATIM NOTICES.md ---
  
  # Third-Party Notices
  
  <verbatim body sentinel>
  
  '''
# ---
